[project]
name = "gf_nodes"
description = "This custom node for ComfyUI provides advanced background removal capabilities using the briaai/RMBG-2.0 model. It is designed to seamlessly integrate into the ComfyUI environment, offering users a powerful tool for image processing tasks."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/gorillaframeai/GF_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "GF_nodes"
Icon = ""
